# AutoPilot

./: .gitignore  AutoPilot.h  README.md  auto-pilot.ino  button.ino  gps.ino  wifi.ino
.claude/docs/: NavigationEngagePlan.md  RouteCommunicationResearch.MD  RouteImplementationPlan.md  WireContract.md
.claude/skills/autopilot/: SKILL.md
Arduino/: README.md
Arduino/auto-pilot/: AutoPilot.cpp  AutoPilot.h  arduino_secrets.h  auto-pilot.ino  button.ino  calibrate.h  compass.ino  display.ino  gps.ino  motor.ino  wifi.ino
Arduino/calibrate/: calibrate.ino
Arduino/controller/: AutoPilot.cpp  AutoPilot.h  calibrate.h  command.ino  compass.ino  controller.ino  garmin.ino  gps.ino  led.ino  motor.ino  navsource.ino  pid.ino  pid.ino.no  publish.ino  sketch.yaml  subscribe.ino  telnet.ino  wifi.ino
Arduino/display/: AutoPilot.cpp  AutoPilot.h  arduino_secrets.h  arduino_secrets.h.example  button.ino  command.ino  display.ino  screen.ino  sketch.yaml  subscribe.ino  volt_meter.ino  wifi.ino
Arduino/garmin/: garmin.ino
Arduino/libraries/Adafruit_BusIO/: Adafruit_I2CDevice.cpp  Adafruit_I2CDevice.h
Arduino/libraries/Adafruit_LIS2MDL/: Adafruit_LIS2MDL.cpp  Adafruit_LIS2MDL.h
Arduino/libraries/Adafruit_LSM303_Accel/: Adafruit_LSM303_Accel.cpp  Adafruit_LSM303_Accel.h
Arduino/libraries/Timezone/: library.properties
Arduino/libraries/WiFiNINA/src/: WiFiUdp.cpp  WiFiUdp.h
Arduino/processor/: AutoPilot.cpp  AutoPilot.h  command.ino  gps.ino  led.ino  motor.ino  processor.ino  publish.ino  wifi.ino
circuit/: README.md
circuit/Button_LED/: PCB-Button_LED.dxf  PCB-Button_LED_Autorouter.dsn  PCB-Button_LED_EasyEDA.json  SCH-Button_LED_EasyEDA.json  SCH-Button_LED_Sheet_1_Altium.schdoc
circuit/Controller/12-volt-power/: PCB_12-volt-power.dxf  PCB_12-volt-power_Autorouter.dsn  PCB_12-volt-power_EasyEDA.json  SCH_12-volt-power-Altium.schdoc  SCH_12-volt-power-EasyEDA.json
circuit/Controller/Controller/: PCB_AP-Controller.dxf  PCB_AP-Controller_Autorouter.dsn  PCB_AP-Controller_EasyEDA.json  SCH_AP-Controller_EasyEDA.json  SCH_AP-Controller_Sheet_1_Altium.schdoc
circuit/Display/: PCB-Display-Autorouter.dsn  PCB-Display-EsayEDA.json  PCB-Display.dxf  SCH-Display_EasyEDA.json  SCH-Display_Sheet_1_Altium.schdoc  SCH-Display_Sheet_2_Altium.schdoc
circuit/Display/Button/: PCB_AP-Button-LED-V2.dxf  PCB_AP-Button-LED-V2_Autorouter.dsn  PCB_AP-Button-LED-V2_EasyEDA.json  SCH_AP-Button-LED-V2_EasyEDA.json  SCH_AP-Button_LED_Sheet_V2_Altium.schdoc
circuit/Display/Display/: PCB_AP-Display-2.1.dxf  PCB_AP-Display-2.1_Autorouter.dsn  PCB_AP-Display-2.1_EasyEDA.json  SCH_AP-DIsplay-2.1_Altium.schdoc  SCH_AP-Display-2.1_EasyEDA.json
circuit/Orange PI Power Hat/: PCB-Orange_PI_Power_Hat.dxf  PCB-Orange_PI_Power_Hat_Autorouter.dsn  PCB_Orange_PI_Power_Hat_EasyEDA.json  SCH-Orange_PI_Power_Hat_Sheet_1_Altium.schdoc  SCH-Orange_Pi_Power_Hat_EasyEDA.json
circuit/Unified/: PCB-Unified.dxf  PCB-Unified_Autorouter.dsn  PCB-Unified_EasyEDA.json  SCH-Unified_EasyEDA.json  SCH-Unified_Sheet_1_Altium.schdoc  SCH-Unified_Sheet_2_Altium.schdoc
circuit/archive/: circuit.cddx
emulator/: README.md  conftest.py  garmin_emulator.py  geo.py  nmea.py  requirements.txt
emulator/scenarios/: scenario2_route.py  scenario3_accept_echo.py
emulator/tests/: test_geo.py  test_nmea.py
experiments/pid/: pid_test.py  requirements.txt
monitor/: README.md  monitorAutoPilot.py
navigator/: README.md
navigator/boot/firmware/: cmdline.txt
navigator/etc/systemd/system/: wifi-keepalive.service
navigator/etc/udev/rules.d/: 70-serial-opencpn.rules
navigator/home/navigator/.config/autostart/: no-screen-blank.desktop  set-resolution.desktop
navigator/home/navigator/.config/xfce4/xfconf/xfce-perchannel-xml/: displays.xml
opencpn_plugin/autopilot_pi/: CMakeLists.txt  README.md
opencpn_plugin/autopilot_pi/flatpak/: org.opencpn.OpenCPN.Plugin.autopilot.yaml
opencpn_plugin/autopilot_pi/include/: AutoPilotLink.h  AutoPilotPanel.h  autopilot_pi.h  version.h
opencpn_plugin/autopilot_pi/src/: AutoPilotLink.cpp  AutoPilotPanel.cpp  autopilot_pi.cpp
pid/: pid_test.py
raspberry/pypilot/hat/translations/es/LC_MESSAGES/: messages.po
raspberry/pypilot/web/translations/fi/LC_MESSAGES/: messages.po
